--- a/styles.css
+++ b/styles.css
@@ -158,7 +158,7 @@ a {
 }
 
 
-.tube-logo, .gpt-logo, .git-logo, .stack-logo, .chrem-logo, .reddit-logo {
+.tube-logo, .gpt-logo, .git-logo, .stack-logo, .chrem-logo, .reddit-logo, .perplexity-logo {
     height: calc(var(--height) * 2);
     padding: 1%;
 }
